# kakoune

./: .build.yml  .gitignore  meson.build  notes.txt
.builds/: build.yml
contrib/: meson-install.sh
src/: commands.cc  meson.build  regex_impl.hh  window.hh
test/: run
